tests/cases/control-flow/errors/for-vector-refutable-pattern.ari
fn main() -> i64 {
  for (value, true) in [(1, true), (2, false)] {
    return value;
  }
  return 0;
}
